// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persona renders Persona correctly with image 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #333333;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
      &:hover $primaryText {
        color: #212121;
      }
  size={13}
  style={undefined}
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    size={13}
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      style={undefined}
    >
      <div
        className=
            ms-Image
            ms-Persona-image
            {
              border-radius: 50%;
              border: 0px;
              height: 48px;
              left: 0px;
              margin-right: 10px;
              overflow: hidden;
              perspective: 1px;
              position: absolute;
              top: 0px;
              width: 48px;
            }
        style={
          Object {
            "height": 48,
            "width": 48,
          }
        }
      >
        <img
          alt=""
          className=
              ms-Image-image
              ms-Image-image--cover
              ms-Image-image--portrait
              is-notLoaded
              is-fadeIn
              {
                display: block;
                height: auto;
                left: 50% /* @noflip */;
                opacity: 0;
                position: absolute;
                top: 50%;
                transform: translate(-50%,-50%);
                width: 100%;
              }
          onError={[Function]}
          onLoad={[Function]}
          role={undefined}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
        />
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #333333;
            font-size: 17px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    >
      <div
        aria-describedby={undefined}
        className="ms-TooltipHost"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Kat Larrson
      </div>
    </div>
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #666666;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
  </div>
</div>
`;

exports[`Persona renders Persona correctly with initials 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #333333;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
      &:hover $primaryText {
        color: #212121;
      }
  size={13}
  style={undefined}
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    size={13}
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      style={undefined}
    >
      <div
        aria-hidden="true"
        className=
            ms-Persona-initials
            {
              background-color: #5E4B8B;
              border-radius: 50%;
              color: #ffffff;
              font-size: 17px;
              font-weight: 400;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
            }
        style={undefined}
      >
        <span>
          KL
        </span>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #333333;
            font-size: 17px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    >
      <div
        aria-describedby={undefined}
        className="ms-TooltipHost"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        Kat Larrson
      </div>
    </div>
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #666666;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
  </div>
</div>
`;

exports[`Persona renders Persona correctly with no props 1`] = `
<div
  className=
      ms-Persona
      ms-Persona--size48
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-shadow: none;
        box-sizing: border-box;
        color: #333333;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 48px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-width: 48px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
      & .contextualHost {
        display: none;
      }
      &:hover $primaryText {
        color: #212121;
      }
  size={13}
  style={undefined}
>
  <div
    className=
        ms-Persona-coin
        ms-Persona--size48
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    size={13}
  >
    <div
      className=
          ms-Persona-imageArea
          {
            flex: 0 0 auto;
            height: 48px;
            position: relative;
            text-align: center;
            width: 48px;
          }
      style={undefined}
    >
      <div
        aria-hidden="true"
        className=
            ms-Persona-initials
            {
              background-color: #2D89EF;
              border-radius: 50%;
              color: #ffffff;
              font-size: 17px;
              font-weight: 400;
              height: 48px;
              line-height: 46px;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              background-color: Window !important;
              border: 1px solid WindowText;
              box-sizing: border-box;
              color: WindowText;
            }
        style={undefined}
      >
        <i
          aria-hidden={true}
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: inline-block;
                font-family: "FabricMDL2Icons-0";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
          data-icon-name="Contact"
          role="presentation"
        >
          
        </i>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Persona-details
        {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          min-width: 0px;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 24px;
          padding-top: 0;
          text-align: left;
          width: 100%;
        }
  >
    <div
      className=
          ms-Persona-primaryText
          {
            color: #333333;
            font-size: 17px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-secondaryText
          {
            color: #666666;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-tertiaryText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
    <div
      className=
          ms-Persona-optionalText
          {
            color: #666666;
            display: none;
            font-size: 12px;
            font-weight: 400;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
    />
  </div>
</div>
`;
